Implemented delete user method & added to docs
